--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -24,7 +24,7 @@ abbr {
 }
 
 .app-\!-color-green {
-  color: govuk-colour("light-green");
+  color: govuk-colour("green");
 }
 
 .app-\!-color-white {
