--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -5,9 +5,11 @@
   padding: 20px;
   width: 100%;
   height: 100%;
+  box-shadow: inset 0 -1px 0 0 $govuk-link-colour;
 
   &__secondary {
     background: govuk-colour("dark-grey");
+    box-shadow: inset 0 -1px 0 0 govuk-colour("dark-grey");
 
     &.app-card--muted {
       background: govuk-colour("light-grey");
@@ -16,5 +18,6 @@
 
   &__primary {
     background: $govuk-brand-colour;
+    box-shadow: inset 0 -1px 0 0 $govuk-brand-colour;
   }
 }
