--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -36,8 +36,7 @@ $govuk-link-colour: #587088;
 @import "~govuk-frontend/govuk/all";
 @import "~@ministryofjustice/frontend/moj/all";
 
-$moj-light-color: govuk-colour("light-grey") !default;
-$moj-light-color: govuk-tint($govuk-brand-colour, 97);
+$moj-light-color: govuk-tint(govuk-colour("black"), 98);
 
 @import "button";
 @import "calendar";
