--- a/src/styles/_display.scss
+++ b/src/styles/_display.scss
@@ -3,6 +3,10 @@
   flex-direction: row;
   justify-content: space-between;
 
+  @include govuk-media-query($until: tablet) {
+    flex-direction: column;
+  }
+
   &--1 {
     flex: 1;
   }
